# gaspype

./: .buildinfo  .flake8  .gitignore  CITATION.cff  LICENSE.html  README.md  floatarray.html  genindex.html  index.html  modules.html  ndfloat.html  objects.inv  pyproject.toml  readme.html  search.html  searchindex.js
.github/workflows/: ci.yml  docs.yml  publish.yml
_autogenerated/: carbon_activity.html  concat.html  elements.html  equilibrium.html  examples.html  fluid.html  fluid_system.html  get_solver.html  hydrogen_production_thermodynamics.html  index.html  methane_mixtures.html  oxygen_partial_pressure.html  set_solver.html  soec_methane.html  soec_syngas.html  sofc_methane.html  species.html  stack.html  sulfur_oxygen_equalibrium.html  thermodynamic_carbon_activity.html
_downloads/235d8080fc5158910ed8da21afb4bc5e/: sofc_methane.py
_downloads/2a3e8b504c94590a1e79b93df8db4658/: thermodynamic_carbon_activity.ipynb
_sources/: floatarray.md.txt  index.md.txt  modules.md.txt  ndfloat.md.txt
_sources/_autogenerated/: concat.md.txt  (+19 more)
examples/: README.md  carbon_activity.md  hydrogen_production_thermodynamics.md  methane_mixtures.md  soec_methane.md  soec_syngas.md  sofc_methane.md  sulfur_oxygen_equalibrium.md  thermodynamic_carbon_activity.md
tests/: benchmark_cp.py  benchmark_cp_comp.py  benchmark_equalibrium.py  md_to_code.py  test_doc_examples.py  test_edge_case_results.py  test_equalibrium.py  test_fluid_references.py  test_lookup_table_error.py  test_results.py  test_results_cantera.py  test_to_pandas.py
thermo_data/: README.md  combine_data.py  compile_to_bin.py  nasa9_hydrocarbons.yaml  nasa9_hydrocarbons_si.yaml  nasa9_hydrocarbons_si_halogens.yaml
(+31 files in other folders)
