[project]
name = "gaspype"
version = "1.1.4"
authors = [
  { name="Nicolas Kruse", email="nicolas.kruse@dlr.de" },
]
description = "Performant library for thermodynamic calculations"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy>2.0.0",
]

[project.urls]
Homepage = "https://dlr-institute-of-future-fuels.github.io/gaspype/"
documentation = "https://dlr-institute-of-future-fuels.github.io/gaspype/api/"
Repository = "https://github.com/DLR-Institute-of-Future-Fuels/gaspype.git"
Issues = "https://github.com/DLR-Institute-of-Future-Fuels/gaspype/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gaspype = ["data/therm_data.bin", "py.typed"]

[project.optional-dependencies]
dev = [
    "flake8",
    "mypy",
    "pytest",
    "pandas",
    "cantera",
    "pyyaml>=6.0.1",
    "types-PyYAML",
    "matplotlib"
]
doc_build = [
  "sphinx",
  "pydata_sphinx_theme",
  "sphinx-autodoc-typehints",
  "myst-parser",
  "pandas",
  "matplotlib",
  "ipykernel==6.29",
  "jupyter==1.1",
  "nbconvert==7.16",
  "notedown==1.5"
]

[tool.mypy]
files = ["src"]
strict = true
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["src"]